--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "@hex0b1t/palindrome",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "A simple palindrome checker",
-    "repository": {"url": "https://github.com/hex0b1t/palindrome-checker.git"},
+    "repository": {
+        "url": "https://github.com/hex0b1t/palindrome-checker.git"
+    },
     "main": "index.js",
     "keywords": [
         "npm",
